--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,3 +105,16 @@ body {
 .slot__label:nth-child(2) {
   transform-origin: 50% 100%;
 }
+span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+svg {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  margin-bottom: 0.2em;
+}
