--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -27,7 +27,7 @@
                 {% if response %}
 
                 <h2>Response:</h2>
-                <p id="response">{{ response }}</p>
+                <p id="response">{{ response | linebreaks }}</p>
                 <div class="speak">
 
                     <input class="toggle" type="checkbox" role="switch" id="speakButton" name="toggle" value="on">
