feat: Update home.html to remove unnecessary eraseText parameter
The event listener for the clear button in the script.js file has been updated to remove the unnecessary `eraseText` parameter. This change improves the code readability and ensures that the input textarea is cleared when the clear button is clicked.

--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -20,8 +20,7 @@
                     <button class="btn btn-success fw-bold" type="submit">
                         GENERATE
                     </button>
-                    <input id="clear" class="btn btn-warning fw-bold" value="CLEAR" onclick="eraseText()"
-                        type="button" />
+                    <input id="clear" class="btn btn-warning fw-bold" value="CLEAR" type="button" />
                 </form>
                 <hr>
                 {% if response %}
