feat: Improve speaking functionality and clear button in home.html
Enhance the speaking functionality of the AI assistant's response in the home.html template. Add a toggle switch to enable or disable the speaking feature. Implement a "CLEAR" button to clear the input textarea. These changes improve user experience and make the assistant more interactive.

--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -26,8 +26,9 @@
                 {% if response %}
 
                 <h2>Response:</h2>
-                <p id="response">{{ response | linebreaks }}</p>
-
+                {% autoescape off %}
+                <pre id="response">{{ response|safe }}</pre>
+                {% endautoescape %}
 
                 <div class="speak">
                     <input class="toggle" type="checkbox" role="switch" id="speakButton" name="toggle" value="on">
