--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -48,7 +48,8 @@
                     </label>
                 </div>
                 {% else %}
-                <h2>There was no response...</h2>
+                <h3>Welcome. Lets Get Started</h3>
+                <p>First ask the AI a question, but writing it into the prompt above.</p>
                 {% endif %}
 
             </div>
