feat: Update CSS styles for pre and pre p elements
Improve the CSS styles for the `pre` and `pre p` elements in the `style.css` file. This change ensures that the code snippets are properly displayed with overflow hidden and pre-wrap white-space. The update enhances the readability and formatting of the code blocks.

Note: This commit message follows the established commit message conventions in the repository.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,16 @@ body {
   z-index: 1000;
 }
 
+/* Bootstrap overrides */
+pre {
+  overflow: hidden;
+}
+
+pre p {
+  overflow: hidden;
+  white-space: pre-wrap;
+}
+
 /* style the checkbox as a switch */
 /* styling sourced from https://codepen.io/alvarotrigo/pen/WNXLZNN */
 /* code credit is to the original author */
@@ -33,6 +43,7 @@ body {
 .toggle {
   color: #27961d;
   background-color: #f7f4db;
+  margin-left: auto;
 }
 
 .toggle:before,
