--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,16 +18,6 @@ body {
   z-index: 1000;
 }
 
-/* Bootstrap overrides */
-pre {
-  overflow: hidden;
-}
-
-pre p {
-  overflow: hidden;
-  white-space: pre-wrap;
-}
-
 /* style the checkbox as a switch */
 /* styling sourced from https://codepen.io/alvarotrigo/pen/WNXLZNN */
 /* code credit is to the original author */
@@ -128,4 +118,27 @@ svg {
   height: 1em;
   fill: currentColor;
   margin-bottom: 0.2em;
+}
+
+/* markdown styles */
+pre {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+}
+
+code {
+  font-family: Consolas, 'Courier New', monospace;
+  color: #d8dee9;
+  white-space: pre-wrap;
+  word-break: normal;
+  word-spacing: normal;
+  overflow: hidden;
+}
+
+pre code p {
+  word-wrap: break-word;
+  word-break: normal;
+  white-space: pre-wrap;
 }
