--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -21,7 +21,7 @@
                     <button class="btn btn-success fw-bold" type="submit">
                         GENERATE
                     </button>
-                    <input id="clear" class="btn btn-warning fw-bold" value="CLEAR" type="button" />
+                    <a id="clear" class="btn btn-warning fw-bold" href="{% url 'home' %}" value="CLEAR" type="button">CLEAR</a>
                 </form>
                 <hr>
                 {% if prompt %}
