--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -7,7 +7,14 @@
     <div class="col-md-7 mt-4">
         <div class="card">
             <h1 class="card-header text-center">A.I WEB ASSISTANT</h1>
-            <div>{{ html_content|safe }}</div>
+            {% if response == null %}
+            {% else %}
+
+            <div>
+                {{ html_content|safe }}
+            </div>
+
+            {% endif %}
             <div class="card-body">
                 <div id="customAlert" class="alert">
                     Speaking...
@@ -21,16 +28,17 @@
                     <button class="btn btn-success fw-bold" type="submit">
                         GENERATE
                     </button>
-                    <a id="clear" class="btn btn-warning fw-bold" href="{% url 'home' %}" value="CLEAR" type="button">CLEAR</a>
+                    <a id="clear" class="btn btn-warning fw-bold" href="{% url 'home' %}" value="CLEAR"
+                        type="button">CLEAR</a>
                 </form>
                 <hr>
                 {% if prompt %}
                 <h2>Prompt</h2>
                 <pre><code>{{ prompt|escape }}</code></pre>
                 {% endif %}
-               
 
-                
+
+
                 {% if response %}
                 <h2>Response:</h2>
                 <pre id="response"><code>{{ response|escape|linebreaks }}</code></pre>
@@ -49,7 +57,7 @@
                 <h3>Welcome. Lets Get Started</h3>
                 <p>First ask the AI a question, but writing it into the prompt above.</p>
                 {% endif %}
-                
+
 
             </div>
         </div>
