chore: Update "Turn the text reader on/off below" label in home.html
The label "Turn the text reader on/off below" in the home.html template has been updated to "Turn the text reader on/off". This change improves the clarity and conciseness of the label.

Note: This commit message follows the established commit message conventions in the repository.

--- a/templates/assistant/home.html
+++ b/templates/assistant/home.html
@@ -36,7 +36,7 @@
                 <pre id="response"><code>{{ response|escape|linebreaks }}</code></pre>
 
                 <div class="speak">
-                    <P class="speak_lable">Turn the text reader on/off below</P>
+                    <P class="speak_lable">Turn the text reader on/off</P>
                     <input class="toggle" type="checkbox" role="switch" id="speakButton" name="toggle" value="on">
                     <label for="toggle" class="slot">
                         <span class="slot__label">OFF
