--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,14 @@
     <title>Web Assistant | {% block title %} {% endblock %}</title>
     <!-- favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.ico' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
     {% block content %}
     {% endblock %}
 </body>
-<script src="{% static 'js/script.js' %}"></script>
+<script type="application/javascript"  src="{% static 'js/script.js' %}"></script>
 
 </html>
