--- a/templates/assistant/error.html
+++ b/templates/assistant/error.html
@@ -3,10 +3,14 @@
 {% block content %}
 <div class="row justify-content-center my-4">
     <div class="col-md-7 mt-4">
-        <h1>An error occurred</h1>
-        <p>{{ error_message }}</p>
-        <p>Make sure you are connected to the internet or your query is correct</p>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+        <div class="card">
+            <h1 class="card-header text-center">An error occurred</h1>
+            <div class="card-body">
+                <p>{{ error_message }}</p>
+                <p>Make sure you are connected to the internet or your query is correct</p>
+                <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
